# cpp-ami-2024

./: readme.md
fmt/: dynamicsprintf.cpp  ostringstream.cpp  sprintf.cpp
notes/: etc.md  vscode.md
ranges/: 1  1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  awful_sort.cpp  generator_good_sort.cpp  good_sort.cpp  lambda.cpp
sem01-02/presentations/: git.ipynb  welcome.md
sem03-04/: presentaion.md
sem03-04/code/: Makefile  cast.cpp  char.cpp  cinttypes.cpp  endian.cpp  overflow  overflow.cpp  sandbox.cpp  sizeof.cpp
sem05-06/: presentaion.md
sem05-06/code/: Makefile  alignof.cpp  intmain  intmain.cpp  ptr.cpp  ptrub  ptrub.cpp  struct.cpp
sem05-06/hard_sandbox/: Makefile
sem05-06/sandbox/: double_print_hello.cpp  double_print_hello.h  main.cpp  print_hello.cpp
sem05-06/tasks/: CMakeLists.txt
sem05-06/tasks/list_to_str/: CMakeLists.txt  list_to_str.hpp  test.cpp
sem05-06/tasks/move_zeros/: CMakeLists.txt  README.md  move_zeros.hpp  test.cpp
sem05-06/tasks/split/: README.md  split.hpp  test.cpp
sem07-08/: presentaion.md
sem07-08/tasks/: CMakeLists.txt
sem07-08/tasks/deque/: CMakeLists.txt  deque.cpp  deque.hpp
sem07-08/tasks/stack/: stack.cpp  stack.hpp  test.cpp
sem07-08/tasks/string_view/: string_view.cpp  string_view.hpp  test.cpp
sem09-10/: presentaion.md
sem11-12/: presentaion.md
sem11-12/code/: chrono.cpp  lib.cpp  main.cpp
sem11-12/sandbox/: Makefile  cmp.cpp  file.cpp  static.cpp
sem11-12/tasks/: CMakeLists.txt
sem11-12/tasks/deque/: deque.hpp  test.cpp
sem13-14/: presentaion.md  presentation.md
sem13-14/code/: 0  chrono
(+9 files in other folders)
